--- a/index.html
+++ b/index.html
@@ -2,9 +2,45 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>Hi</title>
+    <title>test</title>
+    <link rel="stylesheet" href="css/styles.css"/>
 </head>
 <body>
-this is a new page
+    <nav tabindex="0" class="menu">
+        <div class="activator">Menu</div>
+        <div class="hidden">
+            <a href="#Title">Title Page</a>
+            <br />
+            <hr />
+            <a href="#SecondPage">Content Page</a>
+        </div>
+    </nav>
+
+    <section class="picture" id="Title">
+        <div class="title-box darker">
+            <h1 class="pagetitle">
+                Welcome to my personal github page.
+            </h1>
+            <hr />
+            In the coming months I will extend this to have links to all my current and previous projects
+        </div>
+    </section>
+    <section class="text">
+        <div class="title-box darker">
+            <h1>Creating valuable Solutions</h1>
+            <hr />
+            <p> As we speak I'm working on creating valuable solutions. Projects like:</p>
+            <ul>
+                <li>static malware analysis</li>
+            </ul>
+        </div>
+    </section>
+    <section class="picture" id="SecondPage">
+        <div class="title-box lighter">
+            <H1 class="pagetitle">Project Planetwars</H1>
+            <hr />
+            <p>I've created a page, together with Radu Jica and Cheng-lyam Lam</p>
+        </div>
+    </section>
 </body>
 </html>
