some temporary changes

--- a/index.html
+++ b/index.html
@@ -2,45 +2,19 @@
 <html>
 <head lang="en">
     <meta charset="UTF-8">
-    <title>test</title>
-    <link rel="stylesheet" href="css/styles.css"/>
+    <title></title>
+    <script src="js/Chart.js"></script>
+    <script src="js/script.js"></script>
+    <style>
+        html, body { margin:0; text-align: center; height:100%; width:100%; background: #ccc;}
+        h1,h2{ font-family: Helvetica,sans-serif; color: #333; }
+        #exampleID { width:80%; height:30%; margin-left:auto; margin-right: auto;  }
+        h2 { display: inline-block; background: #111; color: #ccc; margin-bottom: 0; padding:1em 5em;}
+        canvas{ display:inline; background:#333; width: inherit; height: 10%; padding:3em; }
+    </style>
 </head>
 <body>
-    <nav tabindex="0" class="menu">
-        <div class="activator">Menu</div>
-        <div class="hidden">
-            <a href="#Title">Title Page</a>
-            <br />
-            <hr />
-            <a href="#SecondPage">Content Page</a>
-        </div>
-    </nav>
-
-    <section class="picture" id="Title">
-        <div class="title-box darker">
-            <h1 class="pagetitle">
-                Welcome to my personal github page.
-            </h1>
-            <hr />
-            In the coming months I will extend this to have links to all my current and previous projects
-        </div>
-    </section>
-    <section class="text">
-        <div class="title-box darker">
-            <h1>Creating valuable Solutions</h1>
-            <hr />
-            <p> As we speak I'm working on creating valuable solutions. Projects like:</p>
-            <ul>
-                <li>static malware analysis</li>
-            </ul>
-        </div>
-    </section>
-    <section class="picture" id="SecondPage">
-        <div class="title-box lighter">
-            <H1 class="pagetitle">Project Planetwars</H1>
-            <hr />
-            <p>I've created a page, together with Radu Jica and Cheng-lyam Lam</p>
-        </div>
-    </section>
+    <h1>Example visualisation</h1>
+    <div id="exampleID"></div>
 </body>
 </html>
