some temporary changes

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <style>
         html, body { margin:0; text-align: center; height:100%; width:100%; background: #ccc;}
         h1,h2{ font-family: Helvetica,sans-serif; color: #333; }
-        #exampleID { width:80%; height: 60vh; margin-left:auto; margin-right: auto;  } 
+        #exampleID { width:80%; height: 600px; margin-left:auto; margin-right: auto;  }
         
         h2 { display: inline-block; background: #111; color: #ccc; margin: 0; padding:1em 0;}
         .graphBox { background:#333; }
