--- a/index.html
+++ b/index.html
@@ -105,21 +105,21 @@
             </h3>
         </div>
         <div id="header-warning" class="panel-collapse collapse in">
-        <div class="panel-body">
-            <p>The content is from the VU University's Human Computer Interaction Course 2015<br>
-                I do not claim to have any rights on the content.<br>
-                Please don't copy or redistribute the materials.
-            </p>
-            <hr>
-            <p>
-                This course can cause severe <strong>annoyances</strong>, a <strong>lack of joy</strong> and even
-                <strong>depression</strong>, preceed with caution <br/>
-                In case of Emergency:<br/>
-                <iframe width="100%" height="100" scrolling="no" frameborder="no"
-                        src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/150936679&amp;auto_play=false&amp;hide_related=false&amp;show_comments=false&amp;show_user=false&amp;show_reposts=false&amp;visual=false#t=14s"></iframe>
-            </p>
-        </div>
+            <div class="panel-body">
+                <p>The content is from the VU University's Human Computer Interaction Course 2015<br>
+                    I do not claim to have any rights on the content.<br>
+                    Please don't copy or redistribute the materials.
+                </p>
+                <hr>
+                <p>
+                    This course can cause severe <strong>annoyances</strong>, a <strong>lack of joy</strong> and even
+                    <strong>depression</strong>, preceed with caution <br/>
+                    In case of Emergency:<br/>
+                    <iframe width="100%" height="100" scrolling="no" frameborder="no"
+                            src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/150936679&amp;auto_play=false&amp;hide_related=false&amp;show_comments=false&amp;show_user=false&amp;show_reposts=false&amp;visual=false#t=14s"></iframe>
+                </p>
             </div>
+        </div>
     </div>
     <div class="panel panel-default">
         <div class="panel-heading">
@@ -128,11 +128,10 @@
             </h3>
         </div>
         <div id="headermusic" class="panel-collapse collapse">
-        <div class="panel-body">
-            <iframe width="100%" height="100" scrolling="no" frameborder="no"
-                    src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/98646096&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=false&amp;show_reposts=false&amp;visual=false"></iframe>
-        </div>
+            <div class="panel-body">
+                <iframe width="100%" height="100" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/playlists/1572391&amp;auto_play=false&amp;hide_related=true&amp;show_comments=false&amp;show_user=false&amp;show_reposts=false&amp;visual=true"></iframe>
             </div>
+        </div>
     </div>
 </div>
 
