some changes to render better on small screens

--- a/ijvm/index.html
+++ b/ijvm/index.html
@@ -176,12 +176,11 @@
               The actual constants, 32 bit signed integers (two's complement), 
               since these are 4-bytes a piece, there are 12/4 = 3 constants here, these are:<p>
             </p>
-            <pre>
-              0xffffffff = -1
-              0x00000002 =  2
-              0x00000003 =  3
-            </pre>
-            
+<!--    --><pre>
+<!--    -->   0xffffffff = -1
+<!--    -->   0x00000002 =  2
+<!--    -->   0x00000003 =  3
+<!--    --></pre> 
           </div>
         </div>
         <div id="text-explanation" class="off">
@@ -222,22 +221,21 @@
               their opcodes
             <p>
             <pre>
-              .main
-                BIPUSH 0x70    // 10 70          
-                DUP            // 59             
-                BIPUSH 0xff    // 10 ff          
-                IADD           // 60             
-                DUP            // 59             
-                DUP            // 59             
-                BIPUSH 0xff    // 10 ff          
-                ISUB           // 64             
-                OUT            // fd             
-                OUT            // fd             
-                OUT            // fd             
-                OUT            // fd             
-              .end-main
-            
-            </pre>
+<!--     --> .main
+<!--     -->   BIPUSH 0x70    // 10 70          
+<!--     -->   DUP            // 59             
+<!--     -->   BIPUSH 0xff    // 10 ff          
+<!--     -->   IADD           // 60             
+<!--     -->   DUP            // 59             
+<!--     -->   DUP            // 59             
+<!--     -->   BIPUSH 0xff    // 10 ff          
+<!--     -->   ISUB           // 64             
+<!--     -->   OUT            // fd             
+<!--     -->   OUT            // fd             
+<!--     -->   OUT            // fd             
+<!--     -->   OUT            // fd             
+<!--     --> .end-main     
+<!--     --></pre>
           </div>
         </div>
       </div>
