--- a/ijvm/index.html
+++ b/ijvm/index.html
@@ -63,7 +63,11 @@
         <div class="text-data byte">FD</div>
       </div>
 
-      <button id="switch-theme">Switch theme</button>
+      <div class="button-group">
+        <a id="switch-theme">Switch theme</a>
+        <a href="example.jas">JAS file</a>
+        <a href="example.ijvm">IJVM file</a>
+      </div>
     </div>
   </div>
   <div class="explanation-block">
