--- a/HCI/index.html
+++ b/HCI/index.html
@@ -115,8 +115,14 @@
                     This course can cause severe <strong>annoyances</strong>, a <strong>lack of joy</strong> and even
                     <strong>depression</strong>, preceed with caution <br/>
                     In case of Emergency:<br/>
+                    <iframe width="100%" height="300" scrolling="no" frameborder="no" allow="autoplay"
+                        src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/268361091&color=%23b6170f&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"></iframe>
+
+                    <!--
+                    Apparently this was taken down :'(
                     <iframe width="100%" height="100" scrolling="no" frameborder="no"
                             src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/150936679&amp;auto_play=false&amp;hide_related=false&amp;show_comments=false&amp;show_user=false&amp;show_reposts=false&amp;visual=false#t=14s"></iframe>
+                    -->
                 </p>
             </div>
         </div>
